<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        style="@style/gettingStartedTopItemStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/getting_started_header_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/getting_started_header" />
    </LinearLayout>

    <LinearLayout
        style="@style/gettingStartedItemStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="[future] Create your own local channel: whether its a audio only or video broadcasting or simply a blog" />
    </LinearLayout>

    <LinearLayout
        style="@style/gettingStartedItemStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="[future] Watch live events: go to a location and you might be able to find different broadcasters reporting the same event" />
    </LinearLayout>

    <LinearLayout
        style="@style/gettingStartedItemStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="[future] Get incentive: get paid for creating content!" />
    </LinearLayout>

    <LinearLayout
        style="@style/gettingStartedItemStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/getting_started_news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/news"
            android:text="@string/getting_started_news" />
    </LinearLayout>

    <LinearLayout
        style="@style/gettingStartedItemStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/getting_started_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/microphone"
            android:text="@string/getting_started_report" />
    </LinearLayout>

    <LinearLayout
        style="@style/gettingStartedItemStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/getting_started_trade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/money_bag"
            android:text="@string/getting_started_trade" />
    </LinearLayout>

    <LinearLayout
        style="@style/gettingStartedItemStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/getting_started_organize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/megaphone"
            android:text="@string/getting_started_organize" />
    </LinearLayout>

    <LinearLayout
        style="@style/gettingStartedItemStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/getting_started_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/help"
            android:text="@string/getting_started_help" />
    </LinearLayout>

    <LinearLayout
        style="@style/gettingStartedBottomItemStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/getting_started_footer_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/getting_started_footer" />
    </LinearLayout>

</LinearLayout>