<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <EditText
        android:id="@+id/login_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_username"
        android:inputType="textNoSuggestions"
        android:padding="@dimen/input_padding"
        android:singleLine="true"
        android:textSize="@dimen/input_text_size" >
    </EditText>

    <EditText
        android:id="@+id/login_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="@dimen/input_padding"
        android:textSize="@dimen/input_text_size" >
    </EditText>

    <Button
        android:id="@+id/login_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_login" />

    <com.facebook.widget.LoginButton
        android:id="@+id/login_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/login_googleplus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp" />

    <include
        android:id="@+id/login_progress"
        layout="@layout/module_list_footer"
        android:visibility="gone" />

</LinearLayout>